--- a/advent.html
+++ b/advent.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advent</title>
+    <title>Tematske dekoracije</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -124,7 +124,7 @@
                         <a class="nav-link" href="gallery.html">Galerija</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="advent.html">Advent</a>
+                        <a class="nav-link" href="advent.html">Tematske dekoracije</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Kontakt</a>
@@ -136,7 +136,7 @@
 
     
     <section class="advent">
-        <h1>Advent</h1>
+        <h1>Tematske dekoracije</h1>
         <div class="advent-content">
             <div class="text">
                 <p>Brinemo se o kvaliteti kulturnih događaja te sudjelujemo u uređivanju Advenata.</p>
