--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                         <a class="nav-link" href="gallery.html">Galerija</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="advent.html">Advent</a>
+                        <a class="nav-link" href="advent.html">Tematske dekoracije</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Kontakt</a>
